# megaChess

./: README.md  buildozer.spec  environment.yml  pyproject.toml
.github/workflows/: tests.yml
Chess/: .env.example  board.py  common.py  game.py  generate_icons.py  pieces.py  positions.py  requirements-dev.txt  svg_renderer.py  win_conditions.py
Chess/defs/: custom_theme.json  pieces_defs.json
Chess/defs/layouts/: standard_checkers.json  standard_chess.json
Chess/tests/: position_tests.csv  test_board.py  test_chess.py  test_coverage.py  test_game.py  test_layout_menu.py  test_pieces.py  test_positions.py  test_svg_renderer.py  test_win_conditions.py
